--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -26,11 +26,6 @@ visible_in_sidebar: true
 
 An **aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant’s business details, setting up their configuration and as the final step activation of the merchant’s ability to process transactions.
 
-<img
-    src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
-    alt="Bridge"
-/>
-
 <hr class="tertiary" />
 
 ###### Step 1 - Share information about merchant
@@ -39,7 +34,7 @@ As the first step, the operations team gathers necessary details from the mercha
 
 <hr class="tertiary" />
 
-###### Step 2 - Create a merchant
+###### Step 2 - Setup a merchant
 
 After getting the merchant's information, a preliminary verification is conducted. Then, a record for the merchant is created in the UMAP system, which formally initiates their on-boarding journey.
 
@@ -52,11 +47,11 @@ After getting the merchant's information, a preliminary verification is conducte
 
 <hr class="tertiary" />
 
-###### Step 3 - Set up VPA
+###### Step 3 - Register a VPA
 A VPA has to be created for the merchant, before they can start transacting on UMAP. This gives the merchant the capability to accept payments via UPI, completing the on-boarding process. This can include 2 steps—
 
 
-**Check VPA availability (optional)**
+**Check if a VPA is available (optional)**
 
 This API helps you check the availability of a desired VPA, to ensure it is unique and can be assigned to the merchant without conflicts.
 <Text size="small">
@@ -69,9 +64,8 @@ This API helps you check the availability of a desired VPA, to ensure it is uniq
 </Text>
 
 <br/>
-<br/>
 
-**Assign VPA (required)**
+**Register VPA (required)**
 
 The next API is used to assign a VPA to the merchant. With this, merchant on-boarding is completed seamlessly! The merchant can now initiate transactions on UPI.
 <Text size="small">
