--- a/content/data/match-apis/name-match/api-reference.mdx
+++ b/content/data/match-apis/name-match/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: API reference
+sidebar_title: Name Match API reference
 page_title: Name Match API reference
-order: 9
+order: 4
 visible_in_sidebar: true
 ---
