added more examples, fixed case of tag in API reference

--- a/content/data/match-apis/name-match/examples.mdx
+++ b/content/data/match-apis/name-match/examples.mdx
@@ -92,98 +92,84 @@ Below are some examples of the response you can expect from the Name Match API. 
       <td>
         <p>R K S, Rakesh Kumar Singh</p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+      <td>
+        <p>Match Percentage: <code>43.48%</code></p>
+        <p>Match Type: <code>NO_MATCH</code></p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
+        <p>Match Percentage: <code>27.78%</code></p>
+        <p>Match Type: <code>NO_MATCH</code></p>
+      </td>
     </tr>
     <tr>
       <th>One of the names contains a minor spelling mistake</th>
       <td>
         <p>Anita Kumari, Ankita Kumari</p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
+      <td>
+        <p>Match Percentage: <code>90.91%</code></p>
         <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
+        <p>Match Percentage: <code>83.33%</code></p>
+        <p>Match Type: <code>MODERATE_PARTIAL_MATCH</code></p>
+      </td>
     </tr>
     <tr>
       <th>One of the input has a missing first/middle/last name</th>
       <td>
         <p>Prakash Kumar Chowdhury, Prakash Chowdhury</p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
+      <td>
+        <p>Match Percentage: <code>85%</code></p>
         <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
-    </tr>
-    <tr>
-      <th>One of the input has a missing first/middle/last name</th>
-      <td>
-        <p>Prakash Kumar Chowdhury, Prakash Chowdhury</p>
+        <p>Match Percentage: <code>73.71%</code></p>
+        <p>Match Type: <code>MODERATE_PARTIAL_MATCH</code></p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td>
-      <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
     </tr>
     <tr>
       <th>Names are out of order</th>
       <td>
         <p>Prakash Kumar Chowdhury, Chowdhury Kumar Prakash</p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+      <td>
+        <p>Match Percentage: <code>100%</code></p>
+        <p>Match Type: <code>COMPLETE_MATCH</code></p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
+        <p>Match Percentage: <code>83.33%</code></p>
+        <p>Match Type: <code>MODERATE_PARTIAL_MATCH</code></p>
+      </td>
     </tr>
     <tr>
       <th>Major mismatch in names, one name is common</th>
       <td>
         <p>Prakash Kumar Agarwal, Amita Agarwal</p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+      <td>
+        <p>Match Percentage: <code>58.82%</code></p>
+        <p>Match Type: <code>LOW_PARTIAL_MATCH</code></p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
+        <p>Match Percentage: <code>47.62%</code></p>
+        <p>Match Type: <code>LOW_PARTIAL_MATCH</code></p>
+      </td>
     </tr>
     <tr>
       <th>Names are different</th>
       <td>
         <p>Prakash Kumar Chowdhury, Ram Prasad Singh</p>
       </td>
-      {/* <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+      <td>
+        <p>Match Percentage: <code>35.9%</code></p>
+        <p>Match Type: <code>NO_MATCH</code></p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
-      </td> */}
+        <p>Match Percentage: <code>30.43%</code></p>
+        <p>Match Type: <code>NO_MATCH</code></p>
+      </td>
     </tr>
   </tbody>
 </table>
